warning is printed that it's ignored.)

** Added support for parsing GNU `__attribute__`
GNU C's `__attribute__` syntax is now parsed, but otherwise ignored.  (A
warning is printed that it's ignored.)

** Fixed `auto` with storage class
The storage class in a declaration like:

    c++decl> explain static auto f() -> int
    declare f as static function returning int

is now correctly included.


* Changes in Cdecl 9.4

** Improved constructor & destructor declaration support
Inline file-scope and defaulted & deleted in-class constructors & destructors
are now supported; `final` & `override` are now supported for destructors.

** Explaining forward declarations
Forward `enum`, `class`, `struct`, and `union` declarations are now supported:

    cdecl> explain struct S
    define S as struct S

** Catching types having bit-field widths
Types having bit-field widths are now correctly reported as errors.

** Fixed showing as `using`
Fixed showing of types having qualified pointers as `using` declarations.

** More predefined types
Added `constraint_handler_t` and `lconv`.

** Fixed `char** f()` crash
Explaining this declaration now works.


* Changes in Cdecl 9.3

** Bit-fields
Declarations with bit-field widths are now supported:

    cdecl> explain unsigned x : 3
    declare x as unsigned int width 3 bits

** Digraph warning
A warning is given if the digraph option is set and the current language is C89
or earlier.


* Changes in Cdecl 9.2

** In-class constructor declarations
In-class constructor declarations without any storage-class-like type are now
supported:

    c++decl> explain C(int)
    declare C as constructor (int)

** Context-senstive `final` & `override`
Both `final` and `override` are now recognized as keywords only in a member
function declaration context:

    c++decl> explain int final
    declare final as int
    c++decl> explain void f() final
    declare f as final virtual member function returning void


* Changes in Cdecl 9.1

** K&R C typedefs